<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>datalog-engine</groupId>
    <artifactId>datalog-engine</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>javacc-maven-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>javacc</id>
                        <goals>
                            <goal>javacc</goal>
                        </goals>
                        <configuration>
                            <lookAhead>1</lookAhead>
                            <forceLaCheck>true</forceLaCheck>
                            <isStatic>false</isStatic>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <sourceDirectory>src/main/resources/javacc</sourceDirectory>
                    <grammarEncoding>UTF-8</grammarEncoding>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>